# AutoGitVersion

./: .gitignore  AutoGitVersion.cmake  LICENSE.txt  ReadMe.md  git_version.cpp.in  git_version.h
cmake/: CheckGit.cmake  FileEmbed.cmake  git_version.h
embedded-file/: CMakeLists.txt  main.cpp  message.txt
embedded-git-hash/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
